# pulse-social-network-django

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
network/: admin.py  api.py  apps.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
network/management/commands/: seed_demo.py
network/migrations/: 0001_initial.py
static/css/: app.css
static/js/: app.js
templates/: base.html
templates/network/: _pagination.html  _post_card.html  edit_profile.html  explore.html  feed.html  post_detail.html  profile.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  register.html
