[project]
name = "socialhub"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo",email = "gustavo.sl.0110@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "django (>=5.2,<6)",
    "djangorestframework (>=3.17,<4)",
    "pillow (>=11,<12)",
    "gunicorn (>=23,<24)",
    "whitenoise (>=6.8,<7)",
    "dj-database-url (>=2.3,<3)",
    "psycopg[binary] (>=3.3,<4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
